<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.airqo</groupId>
    <artifactId>device-measurements</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>jar</packaging>

    <name>Kafka Streams Quickstart :: Java</name>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kafka.version>2.7.0</kafka.version>
        <slf4j.version>1.7.7</slf4j.version>
        <log4j.version>1.2.17</log4j.version>
        <io.confluent.kafka-streams-avro-serde.version>6.1.1</io.confluent.kafka-streams-avro-serde.version>
    </properties>

    <repositories>
        <repository>
            <id>apache.snapshots</id>
            <name>Apache Development Snapshot Repository</name>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>

    <!--
		Execute "mvn clean package -Pbuild-jar"
		to build a jar file out of this project!
	-->

    <dependencies>

        <!-- Apache Kafka dependencies -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-streams</artifactId>
            <version>${kafka.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-streams-test-utils</artifactId>
            <version>${kafka.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.3.0</version>
            <type>maven-plugin</type>
        </dependency>


        <!-- https://mvnrepository.com/artifact/io.confluent/kafka-streams-avro-serde -->
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-streams-avro-serde</artifactId>
            <version>${io.confluent.kafka-streams-avro-serde.version}</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20210307</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.0-alpha1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.0-alpha1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.3</version>
        </dependency>


    </dependencies>

    <build>
        <finalName>streams-measurements</finalName>

        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-compiler-plugin</artifactId>-->
<!--                <version>3.1</version>-->
<!--                <configuration>-->
<!--                    <source>11</source>-->
<!--                    <target>11</target>-->
<!--                </configuration>-->
<!--            </plugin>-->

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>net.airqo.DeviceMeasurements</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>

        </plugins>

<!--        <pluginManagement>-->
<!--            <plugins>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-compiler-plugin</artifactId>-->
<!--                    <configuration>-->
<!--                        <source>1.8</source>-->
<!--                        <target>1.8</target>-->
<!--                        <compilerId>jdt</compilerId>-->
<!--                    </configuration>-->
<!--                    <dependencies>-->
<!--                        <dependency>-->
<!--                            <groupId>org.eclipse.tycho</groupId>-->
<!--                            <artifactId>tycho-compiler-jdt</artifactId>-->
<!--                            <version>0.21.0</version>-->
<!--                        </dependency>-->
<!--                    </dependencies>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <groupId>org.eclipse.m2e</groupId>-->
<!--                    <artifactId>lifecycle-mapping</artifactId>-->
<!--                    <version>1.0.0</version>-->
<!--                    <configuration>-->
<!--                        <lifecycleMappingMetadata>-->
<!--                            <pluginExecutions>-->
<!--                                <pluginExecution>-->
<!--                                    <pluginExecutionFilter>-->
<!--                                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                                        <artifactId>maven-assembly-plugin</artifactId>-->
<!--                                        <versionRange>[2.4,)</versionRange>-->
<!--                                        <goals>-->
<!--                                            <goal>single</goal>-->
<!--                                        </goals>-->
<!--                                    </pluginExecutionFilter>-->
<!--                                    <action>-->
<!--                                        <ignore/>-->
<!--                                    </action>-->
<!--                                </pluginExecution>-->
<!--                                <pluginExecution>-->
<!--                                    <pluginExecutionFilter>-->
<!--                                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                                        <artifactId>maven-compiler-plugin</artifactId>-->
<!--                                        <versionRange>[3.1,)</versionRange>-->
<!--                                        <goals>-->
<!--                                            <goal>testCompile</goal>-->
<!--                                            <goal>compile</goal>-->
<!--                                        </goals>-->
<!--                                    </pluginExecutionFilter>-->
<!--                                    <action>-->
<!--                                        <ignore/>-->
<!--                                    </action>-->
<!--                                </pluginExecution>-->
<!--                            </pluginExecutions>-->
<!--                        </lifecycleMappingMetadata>-->
<!--                    </configuration>-->
<!--                </plugin>-->
<!--            </plugins>-->
<!--        </pluginManagement>-->

    </build>

</project>